enable retry and task scheduling pool size threads